# marketdatabook

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: bench_logger.cpp  bench_recovery.cpp  bench_utils.h  bench_write.cpp  find_cpu_freq.cpp
benchmarks/outputs/: bench_logger.txt  bench_write.txt  pps_mock_mode.txt
src/: main.cpp
src/book/: LimitOrderBook.h
src/network/: EpollReactor.h  MulticastReceiver.h  OuchClient.h  TCPSocket.h
src/protocol/: ItchOrderTypes.h  ItchParser.h  OrderTypes.h  OuchOrderTypes.h
src/recovery/: MmapLogger.h  RecoveryEngine.h
src/strategy/: ExecutionEngine.h
src/telemetry/: TSC_Clock.h  TelemetryEngine.h
src/utils/: HierarchicalBitset.h  MagicBuffer.h  MmapLogger.h  PCAPSimulation.h  StaticOrderMap.h  WalFrame.h  crc32.h  spscqueue.h
tests/: CMakeLists.txt  test_crash_recovery.cpp  test_hierarchical_bitset.cpp  test_limit_order_book.cpp  test_static_order_map.cpp  verify_itch_file.py
